objects/Group_Logistics__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <formula>Group_Number__r.Account__r.Account_Executive__r.FirstName + &apos; &apos; +  Group_Number__r.Account__r.Account_Executive__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>HYPERLINK(  Group_Number__r.Account__r.Id,Group_Number__r.Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Group_Number__r.Account__r.Account_Manager__r.FirstName + &apos; &apos; +  Group_Number__r.Account__r.Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Billing_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Anthem Billing Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_IT_Coding_To_Map_Members_To_Group__c</fullName>
        <label>Anthem IT Coding To Map Members To Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Underwriting_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anthem Underwriting Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Logistics4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Are_Anthem_Group_Values_Passed_On_File__c</fullName>
        <label>Are Anthem Group Values Passed On File</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Analyst__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Analyst</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Set_Up__c</fullName>
        <label>Billing Set Up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WGS</fullName>
                </value>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA__c</fullName>
        <label>COBRA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>TEXT(Group_Number__r.ClaimSystem__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracting_State__c</fullName>
        <formula>TEXT(Group_Number__r.Account__r.NASCO_Contracting_Situs_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracting State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_IT_Reporting_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom IT Reporting Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_File_Originally_Implemented__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date File Originally Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeDupper_Dataset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DeDupper Dataset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeDupper__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DeDupper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disabled_Dependent_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disabled Dependent Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Source__c</fullName>
        <label>Do Not Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Anthem_Generate_HCID__c</fullName>
        <label>Does Anthem Generate HCID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Client_Pass_SSN_On_Eligibility_File__c</fullName>
        <label>Does Client Pass SSN On Eligibility File</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Client_Pass_Unique_ID_For_ID_Cards__c</fullName>
        <label>Does Client Pass Unique ID For ID Cards</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Client_Use_Department_Number__c</fullName>
        <label>Does Client Use Department Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Group_Have_Member_Exception__c</fullName>
        <label>Does Group Have Member Exception</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESR_Contact__c</fullName>
        <formula>Group_Number__r.Employer_Service_Representative_ESR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESR Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>Quote_Name__r.GroupOriginalEffectiveDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_File_1_Contacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility File #1 Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_File_2_Contacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility File #2 Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Reports_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Reports Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Logistics2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_1_Discrepancy_Contacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File #1 Discrepancy Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_2_Discrepancy_Contacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File #2 Discrepancy Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Delivery_Day_Of_Week__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Delivery Day Of Week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Format__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Frequency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Transmission__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Transmission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Association_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Association Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Complexity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Complexity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Number</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Group Logistics</relationshipLabel>
        <relationshipName>Group_Logistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Service_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Service Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Logistics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Services_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Services Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handicapped_Certification_Frequency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Handicapped Certification Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ID Card Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Logistics3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_Card_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoming_Feed_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incoming Feed Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_File_Dataset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Input File Dataset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Input Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Client_Associated_With_Other_Groups__c</fullName>
        <label>Is Client Associated With Other Groups</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Custom_IT_Reporting_Created__c</fullName>
        <label>Is Custom IT Reporting Created</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Department_Number_Mandatory__c</fullName>
        <label>Is Department Number Mandatory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_Private_Exchange_Group__c</fullName>
        <formula>Group_Number__r.IsPrivateExchangePEX__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is this a Private Exchange Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_a_WGS_NASCO_Split_Group__c</fullName>
        <label>Is this a WGS/NASCO Split Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LOB Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTD__c</fullName>
        <label>LTD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Requests__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Manual Requests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare__c</fullName>
        <label>Medicare</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Exception_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Exception Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Exception_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Exception Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Exception__c</fullName>
        <label>Member Exception</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_or_Subscriber_Level_Cards__c</fullName>
        <label>Member or Subscriber Level Cards</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <label>Member Level</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <label>Subscriber Level</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_On_or_Off_Shore__c</fullName>
        <label>Membership On or Off Shore</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NASCO_DEDUPPER_DATASET_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO DEDUPPER DATASET - MO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_DEDUPPER_DATASET_PROD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO DEDUPPER DATASET - PROD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_NPPE_DATASET_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO NPPE DATASET - MO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_NPPE_DATASET_PROD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO NPPE DATASET - PROD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_RTXER_DATASET_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO RTXER DATASET - MO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_RTXER_DATASET_PROD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO RTXER DATASET - PROD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_RTXSUM_DATASET_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO RTXSUM DATASET- MO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_RTXSUM_DATASET_PROD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO RTXSUM DATASET- PROD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_SCRUBBER_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO SCRUBBER -MO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_SCRUBBER_PROD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO SCRUBBER - PROD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_STEP_AUDIT_DATASET_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO STEP AUDIT DATASET - MO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_STEP_AUDIT_DATASET_PROD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO STEP AUDIT DATASET - PROD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_TRANS_GENERATOR_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO TRANS GENERATOR - MO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_TRANS_GENERATOR_PROD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO TRANS GENERATOR - PROD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPPE_BYPASS_WGS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPPE BYPASS (WGS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPPE_Dataset_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPPE Dataset (NASCO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Group_Contacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Group Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_File_Dataset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Output File Dataset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCP Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP__c</fullName>
        <label>PCP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PHI_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PHI Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee__c</fullName>
        <formula>Group_Number__r.ID_Card_Performance_Guarantee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Guarantee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Exchange_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Private Exchange Account</label>
        <referenceTo>Alpha_Prefix_Request__c</referenceTo>
        <relationshipLabel>Group Logistics</relationshipLabel>
        <relationshipName>Group_Logistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Private_Exchange_Name__c</fullName>
        <formula>TEXT(Private_Exchange_Account__r.Private_Exchange_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Private Exchange Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Group Logistics</relationshipLabel>
        <relationshipName>Group_Logistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RTXSUM_Dataset_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RTXSUM Dataset (NASCO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTXSUM_ERRRPT_WGS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RTXSUM ERRRPT (WGS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTXSUM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RTXSUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Day__c</fullName>
        <formula>TEXT(Group_Number__r.Account__r.Renewal_Contractual_Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <formula>TEXT(Group_Number__r.Account__r.Renewal_Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirees__c</fullName>
        <label>Retirees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rules_For_Plan_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rules For Plan Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Specific_Fields__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rx Specific Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales RVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Logistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scrubber_Dataset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scrubber Dataset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scrubber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scrubber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Contracts_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Split Contracts Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Contracts__c</fullName>
        <label>Split Contracts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Split_Group_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Split Group Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Audit_ACTREPT_WGS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Audit ACTREPT (WGS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Audit_Dataset_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Audit Dataset (NASCO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Audit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Letter_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Student Letter Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitterID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SubmitterID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXN_Generator_CTLREPT_WGS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TXN Generator CTLREPT (WGS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXN_Generator_Dataset_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TXN Generator Dataset (NASCO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXN_Generator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TXN Generator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tape_CLERK_ID_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tape CLERK ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Rules__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor1__c</fullName>
        <formula>Group_Number__r.Account__r.Account_Vendor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor</label>
        <type>Text</type>
    </fields>
</CustomObject>